<resources>
    <string name="app_name">Platzigram</string>
    <string name="login_username">Nombre de usuario</string>
    <string name="login_name">Nombre</string>
    <string name="login_password">Contraseña</string>
    <string name="desc_logo">Logo de la aplicación</string>
    <string name="login_button">Conectarse</string>
    <string name="login_error">Ocurrió un error: %s</string>
    <string name="textRegister"><b>¿Tienes cuenta?</b></string>
    <string name="textLinkRegister"><b><u>Regístrate aquí</u></b></string>
    <string name="galery">Galería</string>
    <string name="registerLabel">Crear cuenta</string>
    <string name="exampleName">Juan Sopale</string>
    <string name="exampleTimeAgo">Hace 10 días</string>
    <string name="exampleLikesText">10 me gusta</string>

    <string name="timeAgoCard">Hace %d días</string>
    <string name="todayTextCard">Hoy</string>
    <string name="yesterdayTextCard">Ayer</string>
    <string name="likesTextCard">%1$d me gusta</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_nav">Inicio</string>
    <string name="search_bottom_nav">Buscar</string>
    <string name="profile_bottom_nav">Perfil</string>
    <string name="login_password_confirm">Confirmar contraseña</string>
    <string name="login_button_register">Registrarse</string>
    <string name="login_email">Correo electrónico</string>

    <string name="photo_details_title">Foto</string>

    <string name="ProfileFragment">com.cosmelione.platzigram.views.fragments.ProfileFragment</string>
    <string name="SearchFragment">com.cosmelione.platzigram.views.fragments.SearchFragment</string>
    <string name="HomeFragment">com.cosmelione.platzigram.views.fragments.HomeFragment</string>
    <string name="text_title_post_picture">Título</string>
    <string name="text_description_post_picture">Descripción</string>
    <string name="text_post_button">Publicar</string>
    <string name="text_cancel_button">Cancelar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
