<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.CreateAccountActivity">

    <include layout="@layout/appbar_toolbar"  />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingLeft="@dimen/paddingLeftRight"
        android:paddingRight="@dimen/paddingLeftRight"
        android:paddingTop="@dimen/marginTopFrom"
        android:focusableInTouchMode="true">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextFormDark"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_name"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextFormDark"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextFormDark"
            app:layout_constraintTop_toBottomOf="@id/email_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextFormDark"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextFormDark"
            app:layout_constraintTop_toBottomOf="@+id/password_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_cofirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_confirm"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopFromLess"
            android:text="@string/login_button_register"
            app:layout_constraintTop_toBottomOf="@+id/password_confirm_layout"
            android:theme="@style/Button"/>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>
