<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.view.PostPictureActivity">

    <include layout="@layout/appbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ImageView
            android:id="@+id/image_post_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerInside"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingStart="@dimen/paddingLeftRight"
            android:paddingEnd="@dimen/paddingLeftRight">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_post_picture_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormDark">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_post_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_title_post_picture"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_post_picture_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextFormDark">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description_post_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/text_description_post_picture"
                    android:inputType="textLongMessage"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/marginBottomFromCard">
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cancel_button"
                    android:theme="@style/Button"/>
                <Button
                    android:id="@+id/post_button"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:text="@string/text_post_button"
                    android:theme="@style/Button"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>