<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/marginTopFrom"
    android:paddingStart="@dimen/paddingLeftRight"
    android:paddingEnd="@dimen/paddingLeftRight"
    tools:context=".views.LoginActivity"
    tools:showIn="@layout/activity_login"
    app:layout_constraintTop_toBottomOf="@id/imageLogo"
    app:layout_constraintBottom_toTopOf="@+id/textRegister"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextForm"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextForm"
        app:layout_constraintTop_toBottomOf="@+id/username_layout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textLight">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopFromLess"
        android:text="@string/login_button"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        android:theme="@style/Button"/>

</android.support.constraint.ConstraintLayout>