<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".views.LoginActivity">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="129dp"
        android:layout_height="127dp"
        android:layout_marginEnd="@dimen/marginLeftRight"
        android:layout_marginStart="@dimen/marginLeftRight"
        android:layout_marginTop="@dimen/marginTopFrom"
        android:contentDescription="@string/desc_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/formContainer"
        app:srcCompat="@drawable/ic_logo"
        android:onClick="goToWebsite"/>

    <include
        layout="@layout/content_login_form"
        android:id="@+id/formContainer"/>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginTopFrom"
        android:layout_marginEnd="@dimen/chainMargin"
        android:text="@string/textRegister"
        app:layout_constraintEnd_toStartOf="@id/textLinkRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formContainer"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textLinkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/chainMargin"
        android:text="@string/textLinkRegister"
        android:onClick="showCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textRegister"
        app:layout_constraintBaseline_toBaselineOf="@+id/textRegister"/>

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/formContainer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/imageLogo"-->
        <!--android:layout_marginTop="48dp">-->

        <!---->

    <!--</android.support.constraint.ConstraintLayout>-->



    <!--<android.support.constraint.Group-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/imageLogo"-->
        <!--android:layout_marginTop="48dp"-->
        <!--app:constraint_referenced_ids="username_layout,password_layout"/>-->


</android.support.constraint.ConstraintLayout>